# neon-invanders

./: .clinerules  .coverage  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  Makefile  NEON_EFFECTS_SUMMARY.md  PERFORMANCE_OPTIMIZATIONS.md  README.md  codecov.yml  config.py  entities.py  game.py  highscore.json  main.py  pyproject.toml  pytest.ini  ruff.toml  run_tests.py  sounds.py  sprites.py
.amazonq/: rules
.github/workflows/: README.md  build.yml  test.yml
src/: __init__.py  config.py  entities.py  game.py  game_optimized.py  hud.py  main.py  neon_effects.py  performance.py  performance_optimizations.py  settings_menu.py  sounds.py  sprites.py
tests/: test_entities.py  test_game.py  test_hud.py  test_settings_menu.py  test_sounds.py  test_sprites.py
